--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.1",
+    "@uiw/react-textarea-code-editor": "^3.1.1",
     "axios": "^1.12.2",
     "classnames": "^2.5.1",
     "react": "^19.1.1",
