--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,15 @@
 {
   "rewrites": [
-    { "source": "/api/:path*", "destination": "https://codelang.vercel.app/ap/:path*" },
+    {
+      "source": "/api/:path*",
+      "destination": "https://codelang.vercel.app/:path*"
+    },
     { "source": "/(.*)", "destination": "/index.html" }
+  ],
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [{ "key": "Access-Control-Allow-Origin", "value": "*" }]
+    }
   ]
 }
