--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://codelang.vercel.app/:path*"
+      "destination": "https://codelang.vercel.app/api/:path*"
     },
     { "source": "/(.*)", "destination": "/index.html" }
   ],
